--- a/school.kv
+++ b/school.kv
@@ -1,20 +1,12 @@
 #:import get_hex_from_color kivy.utils.get_hex_from_color
 #:import FadeTransition kivy.uix.screenmanager.FadeTransition
+#:import RiseInTransition  kivy.uix.screenmanager.RiseInTransition
 
 ScreenManager:
     LogInScreen:
     CatalogSearchScreen:
     LibraryDashboardScreen:
     PasswordPhoneUpdateScreen:
-
-<PhoneUpdateDialog>:
-    orientation: "vertical"
-    spacing: "12dp"
-    size_hint_y: None
-    height: "35dp"
-
-    MDTextField:
-        hint_text: "Phone"
 
 
 <PasswordUpdateDialog>:
@@ -50,8 +42,40 @@ ScreenManager:
                     root.get_pass_update()
                     root.dismiss()
 
+<PhoneUpdateDialog>:
+    title: "Update Phone"
+    size_hint: (0.8, 0.18)
+
+    MDBoxLayout:
+        orientation: "vertical"
+
+        TextInput:
+            id: update_phone
+            size_hint: (1, 0.01)
+
+        MDGridLayout:
+            cols: 2
+            rows: 1
+            size_hint: (1, 0.01)
+
+            Button:
+                size_hint: dp(1), None
+                text: "close"
+                icon: "update"
+                size_hint: (1, 0.01)
+                on_press:
+                    root.dismiss()
+
+            Button:
+                size_hint: dp(1), None
+                text: "update"
+                size_hint: (1, 0.01)
+                on_press:
+                    root.update_phone()
+                    root.dismiss()
+
 <Footer@MDGridLayout>:
-    cols: 7
+    cols: 9
     pos_hint: {'center_x': 0.501, 'center_y': 0}
     size_hint: (0.9, 0.08)
 
@@ -60,9 +84,9 @@ ScreenManager:
             rgba: 0, 0, 0, 2
         Line:
             width: 0.5
-            rectangle: (self.x, self.y+5, self.width, self.height)
+            rectangle: (self.x, self.y-2, self.width, self.height)
     Label:
-        size_hint: 0.0001, 0
+        size_hint: 0.1, 0
 
     MDRoundFlatIconButton:
         icon: 'home'
@@ -70,7 +94,15 @@ ScreenManager:
             app.switch_to_dashboard_screen()
 
     Label:
-        size_hint: 0.01, 0
+        size_hint: 4.0, 0
+
+    MDRoundFlatIconButton:
+        icon: 'logout'
+        on_press:
+            app.switch_log_in_screen()
+
+    Label:
+        size_hint: 4.0, 0
 
     MDRoundFlatIconButton:
         icon: 'book-open-page-variant'
@@ -84,12 +116,8 @@ ScreenManager:
         on_press:
             app.switch_to_password_screen()
 
-
     Label:
-        size_hint: 0.0001, 0.01
-
-    Label:
-        size_hint: 0, 0.04
+        size_hint: 0.1, 0.06
 
 
 <LogInScreen>:
@@ -115,40 +143,42 @@ ScreenManager:
 
         canvas:
             Color:
-                rgba: 1, 1, 1, .20
+                rgba: 1, 1, 1, 0
             Rectangle:
                 pos: self.pos
                 size: self.size
 
-        MDTextFieldRound:
+        MDTextField:
             id: student_id
-            icon_right: "lock"
             hint_text: "PERSON ID"
             required: True
-            color_mode: 'custom'
-            line_color_focus: 1, 1, 1, 1
-            color: 1, 1, 1, 1
 
-        MDTextFieldRound:
+        MDTextField:
             id: password_entered
-            icon_right: "lock"
-            hint_text: "Password"
+            hint_text: "password"
             password: True
             required: True
-            input_filter: "float"
-            color_mode: 'custom'
-            line_color_focus: 1, 1, 1, 1
-            color: 1, 1, 1, 1
+#            input_filter: "float"
 
-
-        MDRaisedButton:
+        MDRoundFlatButton:
             text: "Log In"
             pos_hint: {"center_x": .5}
             md_bg_color: 0, 1, 1, .5
-            on_release: root.get_user_password()
+            on_release:
+                root.get_user_password()
 
     MDBoxLayout:
         pos_hint: {"center_x": .5, "y": .03}
+
+        canvas:
+            Color:
+                rgba: 1, 1, 1, 5
+            Ellipse:
+                pos: 20, 990
+                size: 200 , 200
+                source: 'avatar.png'
+                angle_start: 0
+                angle_end: 360
 
 
 <SelectableButton>:
@@ -183,17 +213,13 @@ ScreenManager:
         size_hint: 0.7, 0.1
         pos_hint: {'center_x': 0.5, 'center_y': 1}
         icon_right: 'book-search'
-        hint_text: 'CATALOG SEARCH'
-        text_size: None, None
-        halign: "left"
-        valign: "middle"
         on_text:
             root.set_items_list(self.text, True)
 
     MDLabel:
         markup: True
-        text: '  Search Results ({})'.format(root.set_items_list(self.text, True))
-        size_hint: 1, 0.05
+        text: ''
+        size_hint: 1, 0.0001
         theme_text_color: "Custom"
         text_color: 1, 0, 0, 1
 
@@ -219,6 +245,9 @@ ScreenManager:
         size_hint: 1, 0.02
 
     Footer:
+    Label:
+        size_hint: 1, 0.02
+
 
 <LibraryDashboardScreen>:
 
@@ -227,29 +256,42 @@ ScreenManager:
     LibraryDashboardBoxScreen:
 
 <LibraryDashboardBoxScreen>:
+    id: lib_notification_holder
     orientation: 'vertical'
     height: "40dp"
     adaptive_height: True
 
-    lib_search_input: lib_search_input
-
     Label:
         size_hint: 1, 0.05
 
-    MDTextFieldRound:
-        id: lib_search_input
-        size_hint: 0.7, 0.1
-        pos_hint: {'center_x': 0.5, 'center_y': 1}
-        icon_right: 'book-search'
-        hint_text: 'CATALOG SEARCH'
-        text_size: None, None
-        halign: "left"
-        valign: "middle"
-        on_text:
-            app.root.transition = FadeTransition(duration=0.0000001)
-            app.switch_to_catalog_screen()
+    MDGridLayout:
+        cols: 3
+        padding: 10
+        spacing: 0.01
+
+        pos_hint: {'center_x': 0.5, 'center_y': 20}
+        size_hint: (0.8, 0.09)
+
+        MDTextFieldRound:
+            id: lib_search_input
+            size_hint: 0.05, 0.1
+            pos_hint: {'center_x': 0.9, 'center_y': 1}
+            hint_text: 'CATALOG SEARCH'
+            text_size: None, None
+
+        FloatLayout:
+            size_hint: (None, None)
+            size: (5, 5)
+            MDIconButton:
+                icon: 'book-search'
+                pos_hint: {'center_x': 0.000001, 'center_y': 7}
+                on_press:
+                    root.search_cloud_data()
+                    app.root.transition = RiseInTransition(duration=0.2)
+                    app.switch_to_catalog_screen()
 
     MDGridLayout:
+        id: notification_field
         cols: 3
         rows: 2
         padding: 100
@@ -261,7 +303,6 @@ ScreenManager:
         MDGridLayout:
             cols: 2
             rows: 1
-#            orientation: 'lr-tb'
 
             Image:
                 source: 'images/borrowedbooks.png'
@@ -277,15 +318,13 @@ ScreenManager:
         MDGridLayout:
             cols: 2
             rows: 1
-#            orientation: 'lr-tb'
-
 
             Image:
                 source: 'images/group.png'
 
             Label:
                 text: '0'
-                size_hint:(0.1, 2)
+                size_hint:(0.08, 3)
                 color: 1,0,1,1
 
         MDLabel:
@@ -295,7 +334,6 @@ ScreenManager:
         MDGridLayout:
             cols: 2
             rows: 1
-#            orientation: 'lr-tb'
 
             Image:
                 source: 'images/booksready.png'
@@ -303,14 +341,12 @@ ScreenManager:
 
             Label:
                 text: '3'
-                size_hint:(0.1, 2)
+                size_hint:(0.1, 0.05)
                 color: 1,0,1,1
 
-        MDLabel:
-            size_hint_x: 0
-
-
     Footer:
+    Label:
+        size_hint: 1, 0.02
 
 
 <PasswordPhoneUpdateScreen>:
@@ -321,6 +357,10 @@ ScreenManager:
 
 <PasswordPhoneBoxUpdate>:
     orientation: 'vertical'
+    height: "10dp"
+
+    on_touch_down:
+        app.get_user_profile_info()
 
     Label:
         size_hint: 1, 0.05
@@ -331,15 +371,19 @@ ScreenManager:
         pos_hint: {"center_x": .5, "center_y": .4}
         size_hint_x: .95
 
-        canvas:
-            Color:
-                rgba: 1, 1, 1, 5
-            Ellipse:
-                pos: 280, 990
-                size: 200 , 200
-                source: 'avatar.png'
-                angle_start: 0
-                angle_end: 360
+#        canvas:
+#            Color:
+#                rgba: 1, 1, 1, 5
+#            Ellipse:
+#                pos: 280, 990
+#                size: 200 , 200
+#                angle_start: 0
+#                angle_end: 360
+
+        AsyncImage:
+            radius: [376, 36, 0, 0, ]
+            source: app.profile_image
+
 
         Label:
             size_hint: 1, 0.09
@@ -353,15 +397,13 @@ ScreenManager:
         pos_hint: {'center_x': 0.501, 'center_y': 0}
         size_hint: (0.9, 0.4)
 
-
         MDLabel:
             text: 'Name'
             theme_text_color: "Custom"
             text_color: 1, 0, 0, 1
 
-
         MDLabel:
-            text: 'Vanessa Carlton'
+            text: app.name
             theme_text_color: "Custom"
             text_color: 0, 0, 0, 1
 
@@ -371,7 +413,7 @@ ScreenManager:
             text_color: 1, 0, 0, 1
 
         MDLabel:
-            text: '9th C'
+            text: app.grade
             theme_text_color: "Custom"
             text_color: 0, 0, 0, 1
 
@@ -381,7 +423,7 @@ ScreenManager:
             text_color: 1, 0, 0, 1
 
         MDLabel:
-            text: 'IXC2F99'
+            text: app.student_id
             theme_text_color: "Custom"
             text_color: 0, 0, 0, 1
 
@@ -394,14 +436,14 @@ ScreenManager:
             cols: 2
             rows: 1
             MDLabel:
-                text: '(956)5830045'
+                text: app.phone
                 theme_text_color: "Custom"
                 text_color: 0, 0, 0, 1
-#            MDRoundFlatButton:
-#                text: "update"
-#                size: (0.4, 0)
-#                on_press:
-#                    app.show_phone_update_dialog()
+            MDRoundFlatButton:
+                text: "update"
+                size: (0.4, 0)
+                on_press:
+                    root.show_phone_update_dialog()
 
         MDLabel:
             text: 'Password'
@@ -413,15 +455,18 @@ ScreenManager:
             rows: 1
 
             MDLabel:
-                text: '*********'
+                text: '********'
                 theme_text_color: "Custom"
                 text_color: 0, 0, 0, 1
+
             MDRoundFlatButton:
                 text: "update"
                 on_press:
                     root.show_password_update_dialog()
 
     Label:
-        size_hint: 1, 0.3
+        size_hint: 1, 0.2
 
     Footer:
+    Label:
+        size_hint: 1, 0.02
