--- a/school.kv
+++ b/school.kv
@@ -328,7 +328,7 @@ ScreenManager:
             Image:
                 source: 'images/borrowedbooks.png'
 
-            Button:
+            Label:
                 text: '2'
                 size_hint:(0.1, 2)
                 color: 1,0,1,1
