--- a/school.kv
+++ b/school.kv
@@ -227,8 +227,8 @@ ScreenManager:
             pos: self.pos
             size: self.size
 
-    Button:
-        text: "+"
+    MDRoundFlatIconButton:
+        icon: "add"
         size_hint_x: None
         width: sp(34)
 
