--- a/school.kv
+++ b/school.kv
@@ -190,14 +190,13 @@ ScreenManager:
 
     MDGridLayout:
         cols:3
-        padding: 100
-        spacing: 50
+        padding: 25
+        spacing: 5
 
         Image:
             source:'avatar.png'
             allow_stretch: True
-            size_hint: dp(0.1), dp(2)
-
+            size_hint: dp(0.1), dp(5)
 
         MDBoxLayout:
             orientation: 'vertical'
@@ -207,30 +206,12 @@ ScreenManager:
 
                 text: "[b]" + root.d_book_title + "[/b]"
 
-
             MDLabel:
                 text: root.d_auth_name
 
         MDRoundFlatIconButton:
             size_hint_x: 0.2
             icon: 'plus'
-
-
-<SelectableButton>:
-    # Draw a bg to indicate selection
-    canvas.before:
-        Color:
-            rgba: (0, 0, 0, 0)
-#            rgba: (1, 0, 0, 1) if self.selected else (.0, 0.9, .1, .3)
-
-        Rectangle:
-            pos: self.pos
-            size: self.size
-
-    MDRoundFlatIconButton:
-        icon: "add"
-        size_hint_x: None
-        width: sp(34)
 
 
 <CatalogSearchScreen>:
@@ -430,8 +411,8 @@ ScreenManager:
     orientation: 'vertical'
     height: "10dp"
 
-#    on_touch_down:
-#        app.get_user_profile_info()
+    on_touch_down:
+        app.get_user_profile_info()
 
     Label:
         size_hint: 1, 0.05
